--- a/style/login.css
+++ b/style/login.css
@@ -1,5 +1,52 @@
 .login-body{
-    background-color: #99ccff;
     min-width: 100vw;
     min-height: 100vh;
+}
+
+.login-row{
+    margin: 0;
+    padding: 0;
+}
+
+.login-col{
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+.login-col-1{
+    background-color: #99ccff;
+    padding: 80px;
+    margin: 0;
+}
+
+.login-col-2{
+    background-color: white;
+    position: relative;
+    padding: 50px;
+    padding-top: 100px;
+}
+
+#login-image{
+    width: 100%;
+}
+
+.input-control{
+    width: 100%;
+    border: none;
+    padding-bottom: 15px;
+    border-bottom:  1px solid gray;
+    outline: none!important;
+    outline-color: transparent!important;
+    margin-bottom: 30px;
+}
+
+@media (min-width:850px){
+    .login-col-1{
+        min-height: 100vh;
+    }
+    
+    .login-col-2{
+        min-height: 100vh;
+    }
 }
