--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,9 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 .body-content{
     min-width: 100vw;
-    min-height:100vh;
+    min-height:100vh;    
 }
