--- a/style/style.css
+++ b/style/style.css
@@ -4,8 +4,8 @@
 }
 
 .body-content{
-    min-width: 100vw;
     min-height:100vh;    
+    position:relative;
 }
 
 .bg-nav{
@@ -37,11 +37,21 @@
 }
 
 .articles-body{
-    width: 100%;
+    
 }
 
 .article-body-img{
+    width: 100vw;
+}
+
+.article-img{
     width: 100%;
+}
+
+.articles-header{
+    margin-top: 2.5%;
+    margin-bottom: 2.5%;
+    text-align: center;
 }
 
 .footer {
