--- a/style/home.css
+++ b/style/home.css
@@ -1,9 +1,8 @@
 .articles-body{
-    position: relative;
-}
-
-.article-body-img{
-    position: relative;
+    background-image: url('../images/homepage-img.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 .article-img{
@@ -12,12 +11,10 @@
 }
 
 .article-container{
-    position: absolute;
-    transform: translate(-50%, -50%);
-    left: 50%;
-    top: 50%;
-    width: 75%;
-    height: 75%;
+    padding: 100px 0;
+    margin-left: 10%;
+    width: 80%;
+    height: 100%;
 }
 
 .article-container-contents{
@@ -41,14 +38,28 @@
 
 .article-image{
     width: 100%;
-    height: 100%;
+    max-height: 400px!important;
 }
 
-.fake-img{
-    height: 350px!important;
+.fakeimg{
+    max-height: 400px!important;
 }
 
 .article-display{
     padding: 30px;
 }
 
+.search-container{
+    margin-bottom: 50px!important;
+    position: relative;
+}
+
+.search-icon-container{
+    position: absolute;
+    top: 8px;
+    left: 8px;
+}
+
+#article-input{
+    padding-left: 30px;
+}
