--- a/style/home.css
+++ b/style/home.css
@@ -1,9 +1,9 @@
-.articles-body{
+/* .articles-body{
     background-image: url('../images/homepage-img.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-}
+} */
 
 .article-img{
     width: 100%;
