--- a/style/sign-up.css
+++ b/style/sign-up.css
@@ -14,13 +14,13 @@
 }
 
 .signUp-col-1{
-    background-color: #99ccff;
+    background-color: none;
     padding: 80px;
     margin: 0;
 }
 
 .signUp-col-2{
-    background-color: white;
+    background-color: none;
     position: relative;
     padding: 50px;
     padding-top: 100px;
